unpackaged/main/default/objects/cmbls__Invoice__c/fields/LeasePlusInvNumber__c.field-meta.xml
<CustomField>
    <fullName>LeasePlusInvNumber__c</fullName>
    <externalId>true</externalId>
    <label>LeasePlusInvNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>