unpackaged/main/default/objects/cmbls__Invoice__c/fields/Omit_From_FUNAS_Auto_Generation__c.field-meta.xml
<CustomField>
    <fullName>Omit_From_FUNAS_Auto_Generation__c</fullName>
    <formula>OR(
    cmbls__Total__c &lt;= 0,
				cmbls__Total_Fees__c = cmbls__Total__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Omit From FUNAS Auto Generation</label>
    <type>Checkbox</type>
</CustomField>